--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -132,6 +132,7 @@ jobs:
 
         # Claude API Configuration
         CLAUDE_API_KEY=${{ secrets.CLAUDE_API_KEY }}
+        USE_CLAUDE_MAX_PLAN=true
 
         # Host Configuration (auto-detected IP address)
         HOST_IP=$FINAL_HOST_IP
