--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -16,6 +16,14 @@ on:
           - production
           - staging
           - development
+      use_claude_max_plan:
+        description: 'Use Claude Max Plan (true) or API Key (false)'
+        required: true
+        default: 'true'
+        type: choice
+        options:
+          - 'true'
+          - 'false'
 
 env:
   DOCKER_BUILDKIT: 1
@@ -124,6 +132,14 @@ jobs:
         
         echo "🌐 Using HOST_IP: $FINAL_HOST_IP"
         
+        # Determine Claude mode
+        CLAUDE_MODE="${{ github.event.inputs.use_claude_max_plan || 'true' }}"
+        if [ "$CLAUDE_MODE" = "true" ]; then
+          echo "🤖 Claude Mode: Max Plan (authenticated via claude /login)"
+        else
+          echo "🔑 Claude Mode: API Key (using CLAUDE_API_KEY)"
+        fi
+        
         # Create .env file from GitHub secrets
         cat > .env << EOF
         # MongoDB Configuration
@@ -132,7 +148,7 @@ jobs:
 
         # Claude API Configuration
         CLAUDE_API_KEY=${{ secrets.CLAUDE_API_KEY }}
-        USE_CLAUDE_MAX_PLAN=true
+        USE_CLAUDE_MAX_PLAN=${{ github.event.inputs.use_claude_max_plan || 'true' }}
 
         # Host Configuration (auto-detected IP address)
         HOST_IP=$FINAL_HOST_IP
@@ -149,6 +165,7 @@ jobs:
         EOF
         
         echo "✅ Environment file created with HOST_IP=$FINAL_HOST_IP"
+        echo "🤖 Claude mode set to: $CLAUDE_MODE"
 
     - name: Build and start services
       run: |
@@ -220,6 +237,7 @@ jobs:
           echo "📅 Deployed: $DEPLOYMENT_TIME"
           echo "🌿 Branch: $BRANCH_NAME"
           echo "📝 Commit: $GIT_SHA"
+          echo "🤖 Claude Mode: ${{ github.event.inputs.use_claude_max_plan || 'true' }}"
         else
           echo "❌ Deployment failed!"
           echo "📅 Failed at: $(date -u)"
