--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -148,8 +148,10 @@ jobs:
         MONGO_INITDB_ROOT_USERNAME=${{ secrets.MONGO_USERNAME }}
         MONGO_INITDB_ROOT_PASSWORD=${{ secrets.MONGO_PASSWORD }}
 
-        # Claude API Configuration
-        CLAUDE_API_KEY=${{ secrets.CLAUDE_API_KEY }}
+        # Claude API Configuration (conditional based on mode)
+        # In max-plan mode, leave API key empty so Claude CLI uses credential files
+        # In API key mode, use the provided API key
+        CLAUDE_API_KEY=$(if [ "$CLAUDE_MODE" = "true" ]; then echo ""; else echo "${{ secrets.CLAUDE_API_KEY }}"; fi)
         USE_CLAUDE_MAX_PLAN=$CLAUDE_MODE
 
         # Host Configuration (auto-detected IP address)
