--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -176,11 +176,20 @@ jobs:
         echo "🔨 Building and starting services..."
         cd $DEPLOY_DIR/claude-workflow-manager
         
-        # Build containers with optimizations (remove --no-cache for faster builds)
-        docker compose build --parallel
-        
-        # Start services
-        docker compose up -d
+        # Use the fast build script if available, otherwise use optimized docker-compose
+        if [ -f "fast-build.sh" ]; then
+          echo "📦 Using fast build script..."
+          chmod +x fast-build.sh
+          # Try no-update first (fastest), then fallbacks
+          NO_UPDATE=true ./fast-build.sh || USE_ULTRAFAST=true ./fast-build.sh || USE_CACHE=true ./fast-build.sh
+        else
+          echo "🏗️ Using optimized Docker Compose build..."
+          # Build containers with optimizations (remove --no-cache for faster builds)
+          docker compose build --parallel
+          
+          # Start services
+          docker compose up -d
+        fi
         
         echo "✅ Services started successfully"
 
