--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -176,16 +176,22 @@ jobs:
         echo "🔨 Building and starting services..."
         cd $DEPLOY_DIR/claude-workflow-manager
         
+        # Force rebuild frontend to include MultiInstanceView (remove cached frontend image)
+        echo "🔄 Removing cached frontend image to ensure fresh build..."
+        docker rmi claude-frontend:prebuilt 2>/dev/null || true
+        docker rmi claude-workflow-manager-frontend 2>/dev/null || true
+        
         # Use the fast build script if available, otherwise use optimized docker-compose
         if [ -f "fast-build.sh" ]; then
           echo "📦 Using fast build script..."
           chmod +x fast-build.sh
-          # Try prebuilt first (fastest), then fallbacks
-          USE_PREBUILT=true ./fast-build.sh || NO_UPDATE=true ./fast-build.sh || USE_ULTRAFAST=true ./fast-build.sh || USE_CACHE=true ./fast-build.sh
+          # Force frontend rebuild by setting environment variable
+          FORCE_FRONTEND_REBUILD=true USE_PREBUILT=true ./fast-build.sh || NO_UPDATE=true ./fast-build.sh || USE_ULTRAFAST=true ./fast-build.sh || USE_CACHE=true ./fast-build.sh
         else
           echo "🏗️ Using optimized Docker Compose build..."
           # Build containers with optimizations - cache OS packages, never cache source
-          docker compose build --parallel
+          docker compose build --parallel --no-cache frontend
+          docker compose build --parallel backend claude-terminal mcp-server
           
           # Start services
           docker compose up -d
