--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -176,28 +176,20 @@ jobs:
         echo "🔨 Building and starting services..."
         cd $DEPLOY_DIR/claude-workflow-manager
         
-        # Force rebuild all services to include latest fixes (remove cached images)
-        echo "🔄 Removing cached images to ensure fresh builds with latest fixes..."
-        docker rmi claude-frontend:prebuilt 2>/dev/null || true
-        docker rmi claude-workflow-manager-frontend 2>/dev/null || true
-        docker rmi claude-backend:prebuilt 2>/dev/null || true
-        docker rmi claude-workflow-manager-backend 2>/dev/null || true
-        docker rmi claude-terminal:prebuilt 2>/dev/null || true
-        docker rmi claude-workflow-manager-claude-terminal 2>/dev/null || true
-        docker rmi claude-mcp:prebuilt 2>/dev/null || true
-        docker rmi claude-workflow-manager-mcp-server 2>/dev/null || true
+        # Always build fresh - no caching to ensure latest code
+        echo "🔄 Building all services fresh (no cache) to ensure latest code..."
+        docker system prune -f --volumes 2>/dev/null || true
         
         # Use the fast build script if available, otherwise use optimized docker-compose
         if [ -f "fast-build.sh" ]; then
-          echo "📦 Using fast build script..."
+          echo "📦 Using fast build script with no cache..."
           chmod +x fast-build.sh
-          # Force frontend rebuild by setting environment variable
-          FORCE_FRONTEND_REBUILD=true USE_PREBUILT=true ./fast-build.sh || NO_UPDATE=true ./fast-build.sh || USE_ULTRAFAST=true ./fast-build.sh || USE_CACHE=true ./fast-build.sh
+          # Always force fresh builds
+          FORCE_FRONTEND_REBUILD=true USE_PREBUILT=true ./fast-build.sh || USE_PREBUILT=true ./fast-build.sh
         else
-          echo "🏗️ Using optimized Docker Compose build..."
-          # Build containers with optimizations - cache OS packages, never cache source
-          docker compose build --parallel --no-cache frontend
-          docker compose build --parallel backend claude-terminal mcp-server
+          echo "🏗️ Using Docker Compose with fresh builds..."
+          # Build all containers fresh - no cache at all
+          docker compose build --no-cache --parallel
           
           # Start services
           docker compose up -d
