--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -176,24 +176,11 @@ jobs:
         echo "🔨 Building and starting services..."
         cd $DEPLOY_DIR/claude-workflow-manager
         
-        # Always build fresh - no caching to ensure latest code
-        echo "🔄 Building all services fresh (no cache) to ensure latest code..."
-        docker system prune -f --volumes 2>/dev/null || true
+        # Build containers
+        docker compose build --no-cache
         
-        # Use the fast build script if available, otherwise use optimized docker-compose
-        if [ -f "fast-build.sh" ]; then
-          echo "📦 Using fast build script with no cache..."
-          chmod +x fast-build.sh
-          # Always force fresh builds
-          FORCE_FRONTEND_REBUILD=true USE_PREBUILT=true ./fast-build.sh || USE_PREBUILT=true ./fast-build.sh
-        else
-          echo "🏗️ Using Docker Compose with fresh builds..."
-          # Build all containers fresh - no cache at all
-          docker compose build --no-cache --parallel
-          
-          # Start services
-          docker compose up -d
-        fi
+        # Start services
+        docker compose up -d
         
         echo "✅ Services started successfully"
 
