--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -176,12 +176,22 @@ jobs:
         echo "🔨 Building and starting services..."
         cd $DEPLOY_DIR/claude-workflow-manager
         
+        # Determine which tag to use based on branch
+        if [ "$BRANCH_NAME" = "main" ]; then
+          BASE_IMAGE_TAG="latest"
+        else
+          # For feature branches, use branch name as tag (with slashes replaced by dashes)
+          BASE_IMAGE_TAG=$(echo "$BRANCH_NAME" | sed 's/\//-/g')
+        fi
+        
+        echo "🏷️  Using base image tag: $BASE_IMAGE_TAG"
+        
         # Check if base images are available for fast deployment
         echo "🔍 Checking for pre-built base images..."
         BASE_IMAGES_AVAILABLE=true
         
         for service in backend-base terminal-base frontend-base; do
-          IMAGE="ghcr.io/${{ github.repository_owner }}/claude-workflow-$service:latest"
+          IMAGE="ghcr.io/${{ github.repository_owner }}/claude-workflow-$service:$BASE_IMAGE_TAG"
           if ! docker manifest inspect "$IMAGE" > /dev/null 2>&1; then
             echo "❌ Base image not found: $IMAGE"
             BASE_IMAGES_AVAILABLE=false
@@ -194,6 +204,7 @@ jobs:
         if [ "$BASE_IMAGES_AVAILABLE" = "true" ]; then
           echo "🚀 Using fast deployment with pre-built base images..."
           export GITHUB_REPOSITORY_OWNER="${{ github.repository_owner }}"
+          export BASE_IMAGE_TAG="$BASE_IMAGE_TAG"
           docker compose -f docker-compose.yml -f docker-compose.fast.yml build --parallel
           docker compose -f docker-compose.yml -f docker-compose.fast.yml up -d
         else
