--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -192,12 +192,16 @@ jobs:
         
         echo "🏷️  Using base image tag: $BASE_IMAGE_TAG"
         
+        # Convert repository owner to lowercase for Docker registry (case-sensitive)
+        REPO_OWNER_LOWERCASE=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+        echo "🏢 Repository owner: $REPO_OWNER_LOWERCASE"
+        
         # Check if base images are available for fast deployment
         echo "🔍 Checking for pre-built base images..."
         BASE_IMAGES_AVAILABLE=true
         
         for service in backend-base terminal-base frontend-base; do
-          IMAGE="ghcr.io/${{ github.repository_owner }}/claude-workflow-$service:$BASE_IMAGE_TAG"
+          IMAGE="ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-$service:$BASE_IMAGE_TAG"
           if ! docker manifest inspect "$IMAGE" > /dev/null 2>&1; then
             echo "❌ Base image not found: $IMAGE"
             BASE_IMAGES_AVAILABLE=false
@@ -209,7 +213,7 @@ jobs:
         
         if [ "$BASE_IMAGES_AVAILABLE" = "true" ]; then
           echo "🚀 Using fast deployment with pre-built base images..."
-          export GITHUB_REPOSITORY_OWNER="${{ github.repository_owner }}"
+          export GITHUB_REPOSITORY_OWNER="$REPO_OWNER_LOWERCASE"
           export BASE_IMAGE_TAG="$BASE_IMAGE_TAG"
           docker compose -f docker-compose.yml -f docker-compose.fast.yml build --parallel
           docker compose -f docker-compose.yml -f docker-compose.fast.yml up -d
