Integrate voice backend and MCP server for voice interaction
Brings the lemonpepper experimental voice services into clode, enabling
full voice interaction capabilities in the AI Assistant panels with
proper Docker containerization and GitHub Actions deployment support.

Voice Services Added:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
• Voice Backend (Port 14300)
  - Whisper.cpp for Speech-to-Text (STT)
  - Picovoice Orca for Text-to-Speech (TTS)
  - WebSocket endpoint for real-time STT streaming
  - HTTP endpoint for TTS synthesis
  - Complete server implementation (basic + enhanced)

• Voice MCP Server (Stdio + HTTP)
  - Model Context Protocol server for voice tools
  - Stdio transport for local Claude integration
  - HTTP/SSE transport on port 14302 for remote access
  - Multi-transport support in single codebase

Directory Structure:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
voice-backend/
  ├── Dockerfile
  ├── requirements.txt
  ├── server.py              # Basic API server
  ├── server_enhanced.py     # Enhanced with more features
  ├── .env.example
  └── README.md

voice-mcp-server/
  ├── Dockerfile
  ├── requirements.txt
  ├── server.py              # Basic MCP server
  ├── server_multi_transport.py  # Multi-transport
  └── README.md

Docker Integration:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
• docker-compose.voice.yml
  - Extends base compose with voice services
  - voice-backend: Main voice API (port 14300)
  - voice-mcp-server: MCP stdio transport
  - voice-mcp-server-http: MCP HTTP transport (port 14302)
  - Conditional deployment based on PICOVOICE_ACCESS_KEY
  - Shared voice_models volume for Whisper models

Frontend Updates:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
• Environment variable support for voice API URL
  - VoiceInput.tsx: Uses REACT_APP_VOICE_API_URL
  - VoiceOutput.tsx: Uses REACT_APP_VOICE_API_URL
  - VoiceChat.tsx: Uses REACT_APP_VOICE_API_URL
  - AgentPanel.tsx: Removed

--- a/.github/workflows/build-base-images.yml
+++ b/.github/workflows/build-base-images.yml
@@ -17,10 +17,15 @@ on:
       - 'claude-workflow-manager/frontend/Dockerfile*'
       - 'claude-workflow-manager/backend/requirements.txt'
       - 'claude-workflow-manager/frontend/package*.json'
+      - 'voice-backend/Dockerfile*'
+      - 'voice-backend/requirements.txt'
+      - 'voice-mcp-server/Dockerfile*'
+      - 'voice-mcp-server/requirements.txt'
       - '.github/workflows/build-base-images.yml'
     branches:
       - main
       - develop
+      - feature/7-add-voice
 
   # Weekly rebuild to get latest security updates
   schedule:
@@ -43,12 +48,18 @@ jobs:
           - name: "backend-base"
             dockerfile: "claude-workflow-manager/backend/Dockerfile.base"
             context: "claude-workflow-manager/backend"
-          - name: "terminal-base" 
+          - name: "terminal-base"
             dockerfile: "claude-workflow-manager/backend/Dockerfile.terminal.base"
             context: "claude-workflow-manager/backend"
           - name: "frontend-base"
             dockerfile: "claude-workflow-manager/frontend/Dockerfile.base"
             context: "claude-workflow-manager/frontend"
+          - name: "voice-backend"
+            dockerfile: "voice-backend/Dockerfile"
+            context: "voice-backend"
+          - name: "voice-mcp-server"
+            dockerfile: "voice-mcp-server/Dockerfile"
+            context: "voice-mcp-server"
 
     steps:
     - name: Checkout repository
@@ -168,7 +179,7 @@ jobs:
         echo "🧹 Cleaning up old base images..."
         
         # Keep last 5 versions of each base image
-        for service in backend-base terminal-base frontend-base; do
+        for service in backend-base terminal-base frontend-base voice-backend voice-mcp-server; do
           echo "Cleaning $service images..."
           docker images --format "table {{.Repository}}:{{.Tag}}\t{{.CreatedAt}}" \
             | grep "claude-workflow-$service" \
