--- a/.github/workflows/deploy-self-hosted.yml
+++ b/.github/workflows/deploy-self-hosted.yml
@@ -219,15 +219,26 @@ jobs:
         CLAUDE_PROMPTS_FOLDER=.clode/claude_prompts
         CLAUDE_AGENTS_FOLDER=.claude/agents
 
+        # Voice Services Configuration (optional)
+        PICOVOICE_ACCESS_KEY=${{ secrets.PICOVOICE_ACCESS_KEY || '' }}
+        REACT_APP_VOICE_API_URL=http://$FINAL_HOST_IP:14300
+
         # Deployment metadata
         DEPLOYMENT_ENV=$DEPLOYMENT_ENV
         DEPLOYMENT_TIME=$DEPLOYMENT_TIME
         GIT_SHA=$GIT_SHA
         BRANCH_NAME=$BRANCH_NAME
         EOF
-        
+
         echo "✅ Environment file created with HOST_IP=$FINAL_HOST_IP"
         echo "🤖 Claude mode set to: $CLAUDE_MODE"
+
+        # Check if voice services should be enabled
+        if [ -n "${{ secrets.PICOVOICE_ACCESS_KEY }}" ]; then
+          echo "🎤 Voice services will be enabled (Picovoice key found)"
+        else
+          echo "ℹ️  Voice services will be skipped (no Picovoice key)"
+        fi
 
     - name: Log in to Container Registry
       run: |
@@ -257,8 +268,8 @@ jobs:
         # Check if base images are available for fast deployment
         echo "🔍 Checking for pre-built base images..."
         BASE_IMAGES_AVAILABLE=true
-        
-        for service in backend-base terminal-base frontend-base; do
+
+        for service in backend-base terminal-base frontend-base voice-backend voice-mcp-server; do
           IMAGE="ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-$service:$BASE_IMAGE_TAG"
           if ! docker manifest inspect "$IMAGE" > /dev/null 2>&1; then
             echo "❌ Base image not found: $IMAGE"
@@ -279,21 +290,43 @@ jobs:
           docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-backend-base:$BASE_IMAGE_TAG" || true
           docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-terminal-base:$BASE_IMAGE_TAG" || true
           docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-frontend-base:$BASE_IMAGE_TAG" || true
+          docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-voice-backend:$BASE_IMAGE_TAG" || true
+          docker pull "ghcr.io/$REPO_OWNER_LOWERCASE/claude-workflow-voice-mcp-server:$BASE_IMAGE_TAG" || true
           
           # Check if force rebuild is requested
           if [ "${{ github.event.inputs.force_rebuild }}" = "true" ]; then
             echo "🔨 Force rebuild requested - building without cache..."
-            docker compose -f docker-compose.yml -f docker-compose.fast.yml build --no-cache --parallel
+            COMPOSE_FILES="-f docker-compose.yml -f docker-compose.fast.yml"
           else
             echo "🔨 Building with cache..."
-            docker compose -f docker-compose.yml -f docker-compose.fast.yml build --parallel
+            COMPOSE_FILES="-f docker-compose.yml -f docker-compose.fast.yml"
           fi
-          
-          docker compose -f docker-compose.yml -f docker-compose.fast.yml up -d
+
+          # Add voice services if Picovoice key is available
+          if [ -n "${{ secrets.PICOVOICE_ACCESS_KEY }}" ]; then
+            echo "🎤 Including voice services in deployment..."
+            COMPOSE_FILES="$COMPOSE_FILES -f docker-compose.voice.yml"
+          fi
+
+          if [ "${{ github.event.inputs.force_rebuild }}" = "true" ]; then
+            docker compose $COMPOSE_FILES build --no-cache --parallel
+          else
+            docker compose $COMPOSE_FILES build --parallel
+          fi
+
+          docker compose $COMPOSE_FILES up -d
         else
           echo "🏗️ Base images not available, using full build..."
-          docker compose build --no-cache --parallel
-          docker compose up -d
+          COMPOSE_FILES="-f docker-compose.yml"
+
+          # Add voice services if Picovoice key is available
+          if [ -n "${{ secrets.PICOVOICE_ACCESS_KEY }}" ]; then
+            echo "🎤 Including voice services in deployment..."
+            COMPOSE_FILES="$COMPOSE_FILES -f docker-compose.voice.yml"
+          fi
+
+          docker compose $COMPOSE_FILES build --no-cache --parallel
+          docker compose $COMPOSE_FILES up -d
         fi
         
         echo "✅ Services started successfully"
@@ -345,6 +378,14 @@ jobs:
         echo "Backend API: http://${HOST_IP_FROM_ENV}:8005"
         echo "MongoDB: ${HOST_IP_FROM_ENV}:27018"
         echo "Redis: ${HOST_IP_FROM_ENV}:6379"
+
+        # Show voice services if enabled
+        if [ -n "${{ secrets.PICOVOICE_ACCESS_KEY }}" ]; then
+          echo ""
+          echo "🎤 Voice Services:"
+          echo "Voice Backend API: http://${HOST_IP_FROM_ENV}:14300"
+          echo "Voice MCP HTTP: http://${HOST_IP_FROM_ENV}:14302"
+        fi
 
     - name: Send deployment notification
       if: always()
