--- a/voice-mcp-server/Dockerfile
+++ b/voice-mcp-server/Dockerfile
@@ -8,13 +8,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy MCP server code
 COPY server.py .
+COPY server_multi_transport.py .
 
-# Make it executable
-RUN chmod +x server.py
+# Make them executable
+RUN chmod +x server.py server_multi_transport.py
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD python -c "import sys; sys.exit(0)"
 
-# Run the MCP server
-CMD ["python", "server.py"]
+# Run the MCP server (default to multi-transport server)
+CMD ["python", "server_multi_transport.py"]
